# overloop-python-react-tech-test

./: ARCHITECTURE.md  PROJECT_GUIDE.md  README.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  connector.py  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_and_seed.py
backend/api/: dependencies.py
backend/config/: __init__.py  database.py
backend/core/: __init__.py  dependencies.py  exceptions.py  logger.py  pagination.py  validators.py
backend/models/: article.py  author.py  base.py  region.py
backend/repositories/: article_repository.py  author_repository.py  base.py  region_repository.py
backend/routes/: articles.py  authors.py  regions.py
backend/schemas/: article_schemas.py  author_schemas.py  pagination_schemas.py  region_schemas.py
backend/scripts/: setup_db.py
backend/services/: article_service.py  author_service.py  region_service.py
backend/techtest/: api.py  baseapp.py  connector.py
backend/techtest/api/: dependencies.py
backend/techtest/config/: database.py  settings.py
backend/techtest/core/: dependencies.py  logger.py
backend/techtest/models/: __init__.py  article.py  author.py  base.py
backend/techtest/repositories/: __init__.py  article_repository.py  author_repository.py  region_repository.py
backend/techtest/routes/: __init__.py  articles.py  authors.py  regions.py
backend/techtest/schemas/: __init__.py  article_schemas.py  region_schemas.py
backend/techtest/services/: __init__.py  article_service.py  author_service.py  region_service.py
backend/techtest/tests/: conftest.py
backend/techtest/tests/integration/test_api/: test_author_api.py
backend/techtest/tests/integration/test_database/: __init__.py
backend/techtest/tests/unit/test_models/: test_author.py
backend/techtest/tests/unit/test_repositories/: test_author_repository.py
backend/techtest/tests/unit/test_services/: test_author_service.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/test_api/: test_article_api.py  test_author_api.py  test_region_api.py
backend/tests/unit/test_models/: test_author.py
backend/tests/unit/test_repositories/: test_author_repository.py
backend/tests/unit/test_services/: test_author_service.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  constants.js  setupTests.js
frontend/src/__mocks__/: axios.js
frontend/src/config/: api.js
frontend/src/contexts/: NotificationContext.js
frontend/src/hooks/: useAuthors.js
frontend/src/services/: articles.js  (+1 more)
(+35 files in other folders)
